--- a/headless_launcher/build.gradle
+++ b/headless_launcher/build.gradle
@@ -14,12 +14,12 @@
  * the License.
  */
 
-
+//noinspection GroovyAssignabilityCheck
 dependencies {
     compile project(':common_tools')
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 15
