--- a/listener/build.gradle
+++ b/listener/build.gradle
@@ -14,6 +14,7 @@
  * the License.
  */
 
+//noinspection GroovyAssignabilityCheck
 dependencies {
   compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
   compile 'org.ros.rosjava_core:rosjava:[0.1,0.2)'
@@ -21,7 +22,7 @@ dependencies {
   compile project(':common_tools')
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     packagingOptions {
