--- a/rocon_nfc_writer/build.gradle
+++ b/rocon_nfc_writer/build.gradle
@@ -14,12 +14,13 @@
  * the License.
  */
 
+//noinspection GroovyAssignabilityCheck
 dependencies {
     compile project(':common_tools')
     compile 'com.github.robotics_in_concert.rocon_rosjava_core:rosjava_utils:[0.1,)'
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
