--- a/robot_remocon/src/main/AndroidManifest.xml
+++ b/robot_remocon/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.rosjava.android_remocons.robot_remocon"
-      android:versionCode="1"
-      android:versionName="1.0">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.github.rosjava.android_remocons.robot_remocon"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="10" />
 
@@ -14,7 +16,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.NFC" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
+        tools:replace="android:icon"
+        >
         <provider
             android:name="com.github.rosjava.android_apps.application_management.RobotsContentProvider"
             android:authorities="com.github.rosjava.android_apps.application_management"
