--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,5 @@ include 'headless_launcher'
 include 'rocon_remocon'
 include 'talker'
 include 'robot_remocon'
+include ':application_management'
+project(':application_management').projectDir = new File('graveyard/application_management')
