build in:  - build in android-studio (ubuntu and windows)  - catkin_make  - gradlew
check gradle link
update maven url at allprojects {}
update .gitignore:
 - ignore build
 - ignore .idea
 - ignore .gradle
 - ignore *.iml
 - ignore local.properties

--- a/build.gradle
+++ b/build.gradle
@@ -29,19 +29,23 @@ buildscript {
 apply plugin: 'catkin'
 
 allprojects {
-
-    repositories {
-        maven {
-            url "https://github.com/talregev/rosjava_mvn_repo/raw/master"
-        }
-    }
-
+    apply from: "https://github.com/talregev/rosjava_mvn_repo/raw/master/maven.gradle"
     group 'com.github.rosjava.android_remocons'
     version = project.catkin.pkg.version
 }
 
 subprojects {
     apply plugin: 'ros-android'
+    
+    afterEvaluate { project ->
+        android {
+            packagingOptions {
+                /* https://github.com/rosjava/android_core/issues/194 */
+                exclude 'META-INF/LICENSE.txt'
+                exclude 'META-INF/NOTICE.txt'
+            }
+        }
+    }
 }
 
 defaultTasks 'assembleRelease', 'uploadArchives'
