--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  */
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.2.1'
+  gradleVersion = '2.2.1'
 }
 
 buildscript {
@@ -25,28 +25,39 @@ buildscript {
 apply plugin: 'catkin'
 
 allprojects {
-    group 'com.github.rosjava.android_remocons'
-    version = project.catkin.pkg.version
+  group 'com.github.rosjava.android_remocons'
+  version = project.catkin.pkg.version
 }
 
 subprojects {
-    /*
-     * The android plugin configures a few things:
-     *
-     *  - local deployment repository : where it dumps the jars and packaged artifacts)
-     *  - local maven repositories    : where it finds your locally installed/built artifacts)
-     *  - external maven repositories : where it goes looking if it can't find dependencies locally
-     *  - android build tools version : which version we use across the board
-     *
-     * To modify, or add repos to the default external maven repositories list, pull request against this code:
-     *
-     *   https://github.com/rosjava/rosjava_bootstrap/blob/indigo/gradle_plugins/src/main/groovy/org/ros/gradle_plugins/RosPlugin.groovy#L31
-     *
-     * To modify the build tools version, pull request against this code:
-     *
-     *   https://github.com/rosjava/rosjava_bootstrap/blob/indigo/gradle_plugins/src/main/groovy/org/ros/gradle_plugins/RosAndroid.groovy#L14
-     */
-    apply plugin: 'ros-android'
+  /*
+   * The android plugin configures a few things:
+   *
+   *  - local deployment repository : where it dumps the jars and packaged artifacts)
+   *  - local maven repositories    : where it finds your locally installed/built artifacts)
+   *  - external maven repositories : where it goes looking if it can't find dependencies locally
+   *  - android build tools version : which version we use across the board
+   *
+   * To modify, or add repos to the default external maven repositories list, pull request against this code:
+   *
+   *   https://github.com/rosjava/rosjava_bootstrap/blob/indigo/gradle_plugins/src/main/groovy/org/ros/gradle_plugins/RosPlugin.groovy#L31
+   *
+   * To modify the build tools version, pull request against this code:
+   *
+   *   https://github.com/rosjava/rosjava_bootstrap/blob/indigo/gradle_plugins/src/main/groovy/org/ros/gradle_plugins/RosAndroid.groovy#L14
+   */
+  apply plugin: 'ros-android'
+
+  afterEvaluate { project ->
+    android {
+      // Exclude a few files that are duplicated across our dependencies and
+      // prevent packaging Android applications.
+      packagingOptions {
+        exclude "META-INF/LICENSE.txt"
+        exclude "META-INF/NOTICE.txt"
+      }
+    }
+  }
 }
 
-defaultTasks 'assembleRelease uploadArchives'
+defaultTasks 'assembleRelease', 'uploadArchives'
