--- a/common_tools/build.gradle
+++ b/common_tools/build.gradle
@@ -15,26 +15,34 @@
  */
 
 dependencies {
-    compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
-    compile 'org.ros.rosjava_core:rosjava:[0.1,0.2)'
-    compile 'org.ros.rosjava_bootstrap:message_generation:[0.1,0.2)'
+    compile 'org.ros.android_core:android_10:[0.2,0.3)'
+    compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
+    compile 'org.ros.rosjava_bootstrap:message_generation:[0.2,0.3)'
     compile 'org.ros.rosjava_messages:diagnostic_msgs:[1.11, 1.12)'
     compile 'org.ros.rosjava_messages:rocon_interaction_msgs:[0.7,0.8)'
     compile 'org.ros.rosjava_messages:rocon_std_msgs:[0.7,0.8)'
     compile 'org.ros.rosjava_messages:rocon_app_manager_msgs:[0.7,0.8)'
-    compile 'com.github.rosjava.android_extras:gingerbread:[0.1,0.2)'
-    compile 'com.github.rosjava.android_extras:zxing:[0.1,0.2)'
-    compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.1,0.2)'
-    compile 'com.github.robotics_in_concert.rocon_rosjava_core:rosjava_utils:[0.1,)'
-    compile 'com.github.robotics_in_concert.rocon_rosjava_core:master_info:[0.1,)'
-    compile 'com.github.robotics_in_concert.rocon_rosjava_core:rocon_interactions:[0.1,)'
+    compile 'com.github.rosjava.android_extras:gingerbread:[0.2,0.3)'
+    compile 'com.github.rosjava.android_extras:zxing:[0.2,0.3)'
+    compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.2,0.3)'
+    compile 'com.github.robotics_in_concert.rocon_rosjava_core:rosjava_utils:[0.2,0.3)'
+    compile 'com.github.robotics_in_concert.rocon_rosjava_core:master_info:[0.2,0.3)'
+    compile 'com.github.robotics_in_concert.rocon_rosjava_core:rocon_interactions:[0.2,0.3)'
     compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 15
+  compileSdkVersion 10
+
+  defaultConfig {
+    minSdkVersion 10
+    targetSdkVersion 10
+    versionCode 1
+    versionName "1.0"
+  }
+
 }
 
 defaultTasks 'assembleRelease'
