--- a/listener/build.gradle
+++ b/listener/build.gradle
@@ -15,21 +15,24 @@
  */
 
 dependencies {
-  compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
-  compile 'org.ros.rosjava_core:rosjava:[0.1,0.2)'
+  compile 'org.ros.android_core:android_10:[0.2,0.3)'
+  compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
   compile 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
   compile project(':common_tools')
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    packagingOptions {
-        /* https://github.com/rosjava/android_core/issues/194 */
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-    }
-    compileSdkVersion 10
+  compileSdkVersion 10
+
+  defaultConfig {
+    minSdkVersion 10
+    targetSdkVersion 10
+    versionCode 1
+    versionName "1.0"
+  }
+
 }
 
 defaultTasks 'assembleRelease'
