--- a/listener/src/main/AndroidManifest.xml
+++ b/listener/src/main/AndroidManifest.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.github.rosjava.android_remocons.listener"
-      android:versionCode="1"
-      android:versionName="0.1"
       xmlns:tools="http://schemas.android.com/tools">
-    <uses-sdk android:minSdkVersion="10" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
+                 android:icon="@mipmap/icon"
                  tools:replace="icon, label">
         <activity android:name="Listener"
                   android:screenOrientation="portrait"
