--- a/rocon_remocon/build.gradle
+++ b/rocon_remocon/build.gradle
@@ -23,6 +23,7 @@
  * like (generates Verify Errors on adb logcat).
 */
 
+//noinspection GroovyAssignabilityCheck
 dependencies {
   compile project(':common_tools')
   compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
