--- a/talker/build.gradle
+++ b/talker/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 }
 */
 
+//noinspection GroovyAssignabilityCheck
 dependencies {
   compile 'org.ros.android_core:android_10:[0.2,0.3)'
   compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
