--- a/rocon_remocon/src/main/AndroidManifest.xml
+++ b/rocon_remocon/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.NFC" />
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
+                 android:icon="@drawable/rocon_icon"
                  tools:replace="icon, label">
         <provider
             android:name=".Database"
