--- a/rocon_nfc_writer/build.gradle
+++ b/rocon_nfc_writer/build.gradle
@@ -28,8 +28,13 @@ android {
   defaultConfig {
     minSdkVersion 18
     targetSdkVersion 18
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "1.0.1"
+  }
+  productFlavors {
+    indigo {
+      applicationId "com.github.rosjava.android_remocons.rocon_nfc_writer.indigo"
+    }
   }
 }
 
