--- a/listener/build.gradle
+++ b/listener/build.gradle
@@ -30,11 +30,14 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 15
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "1.0.1"
   }
-
+  productFlavors {
+    indigo {
+      applicationId "com.github.rosjava.android_remocons.listener.indigo"
+    }
+  }
 }
 
 defaultTasks 'assembleRelease'
- 
