--- a/talker/build.gradle
+++ b/talker/build.gradle
@@ -48,10 +48,14 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 15
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "1.0.1"
   }
-
+  productFlavors {
+    indigo {
+      applicationId "com.github.rosjava.android_remocons.talker.indigo"
+    }
+  }
 }
 
 defaultTasks 'assembleRelease'
