--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@
  */
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.2.1'
+  gradleVersion = '4.10.2'
 }
 
 buildscript {
-    apply from: "https://github.com/rosjava/android_core/raw/indigo/buildscript.gradle"
+    apply from: "https://github.com/rosjava/android_core/raw/kinetic/buildscript.gradle"
 }
 
 apply plugin: 'catkin'
@@ -56,6 +56,7 @@ subprojects {
         exclude "META-INF/LICENSE.txt"
         exclude "META-INF/NOTICE.txt"
       }
+      flavorDimensions 'default'
     }
 
   }
