--- a/rocon_nfc_writer/build.gradle
+++ b/rocon_nfc_writer/build.gradle
@@ -23,18 +23,21 @@ dependencies {
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 21
+  compileSdkVersion 28
 
   defaultConfig {
     minSdkVersion 18
-    targetSdkVersion 18
+    targetSdkVersion 28
     versionCode 2
     versionName "1.0.1"
   }
   productFlavors {
-    indigo {
-      applicationId "com.github.rosjava.android_remocons.rocon_nfc_writer.indigo"
+    kinetic {
+      applicationId "com.github.rosjava.android_remocons.rocon_nfc_writer.kinetic"
     }
+  }
+  lintOptions {
+    abortOnError = false
   }
 }
 
