--- a/rocon_remocon/build.gradle
+++ b/rocon_remocon/build.gradle
@@ -26,14 +26,14 @@
 //noinspection GroovyAssignabilityCheck
 dependencies {
   compile project(':common_tools')
-  compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
-  compile 'org.ros.rosjava_bootstrap:message_generation:[0.2,0.3)'
+  compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
+  compile 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
   compile 'org.ros.rosjava_messages:rocon_interaction_msgs:[0.7,0.8)'
   compile 'org.ros.rosjava_messages:rocon_std_msgs:[0.7,0.8)'
   compile 'org.ros.rosjava_messages:rocon_app_manager_msgs:[0.7,0.8)'
-  compile 'org.ros.android_core:android_10:[0.2,0.3)'
-  compile 'com.github.rosjava.android_extras:zxing:[0.2,0.3)'
-  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.2,0.3)'
+  compile 'org.ros.android_core:android_core_components:[0.4,0.5)'
+  compile 'com.github.rosjava.android_extras:zxing:[0.3,0.4)'
+  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.3,0.4)'
   compile 'com.github.robotics_in_concert.rocon_rosjava_core:master_info:[0.2,0.3)'
   compile 'com.github.robotics_in_concert.rocon_rosjava_core:rocon_interactions:[0.2,0.3)'
   compile 'com.github.robotics_in_concert.rocon_rosjava_core:rosjava_utils:[0.2,0.3)'
@@ -43,20 +43,22 @@ dependencies {
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 15
+  compileSdkVersion 28
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 15
+    minSdkVersion 16
+    targetSdkVersion 28
     versionCode 6
     versionName "1.2.2"
   }
   productFlavors {
-    indigo {
-      applicationId "com.github.rosjava.android_remocons.rocon_remocon.indigo"
+    kinetic {
+      applicationId "com.github.rosjava.android_remocons.rocon_remocon.kinetic"
     }
   }
-
+  lintOptions {
+    abortOnError = false
+  }
 }
 
 defaultTasks 'assembleRelease'
