--- a/talker/build.gradle
+++ b/talker/build.gradle
@@ -33,9 +33,9 @@ dependencies {
 
 //noinspection GroovyAssignabilityCheck
 dependencies {
-  compile 'org.ros.android_core:android_10:[0.2,0.3)'
-  compile 'org.ros.rosjava_core:rosjava:[0.2,0.3)'
-  compile 'org.ros.rosjava_core:rosjava_tutorial_pubsub:[0.2,0.3)'
+  compile 'org.ros.android_core:android_core_components:[0.4,0.5)'
+  compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
+  compile 'org.ros.rosjava_core:rosjava_tutorial_pubsub:[0.3,0.4)'
   compile 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
   compile project(':common_tools')
 }
@@ -43,18 +43,21 @@ dependencies {
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 15
+  compileSdkVersion 28
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 15
+    minSdkVersion 16
+    targetSdkVersion 28
     versionCode 2
     versionName "1.0.1"
   }
   productFlavors {
-    indigo {
-      applicationId "com.github.rosjava.android_remocons.talker.indigo"
+    kinetic {
+      applicationId "com.github.rosjava.android_remocons.talker.kinetic"
     }
+  }
+  lintOptions {
+    abortOnError = false
   }
 }
 
